--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 #calculator{
-  position: fixed;
-  top: 50%;
+  position: absolute;
+  top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 500px;
-  max-height: 350px;
-  width: auto;
+  transform: translate(-50%, -40%);
+  width: 450px;
   height: auto;
   padding: 1%;
   background-color: rgb(70, 70, 70);
@@ -31,10 +29,11 @@ i{
 }
 
 button{
-  width: 100%;
-  height: 100%;
-  font: 3vw "consolas";
-  padding: 2%;
+  font: 25px "consolas";
+  width: 60px;
+  height: 60px;
+  
+  /* padding: 2%; */
   background-color: black;
   color: rgb(200, 200, 200);
   border: 0px solid black;
@@ -47,7 +46,8 @@ button{
 }
 
 #equal{
-  height: 10vw;
+  height: 135px;
+  max-height: 135px;
 }
 
 button:hover{
@@ -62,37 +62,63 @@ button:active{
 }
 
 #result_field{
+  height: 35px;
+  font: 30px "consolas";
   width: 100%;
-  height: 3vw;
   color: green;
-  font: 3vw "consolas";
+  text-align: right;
   background-color: black;
+  
   border-top: 2px solid rgb(90, 90, 90);
   border-right: 2px solid  grey;
   border-bottom: 2px solid grey;
   border-left: 2px solid rgb(90, 90, 90);
-  text-align: right;
 }
 
 table{
   width: 100%;
   height: 100%;
-  height: auto;
   border-collapse: collapse;
 }
 
 td{
-  text-align: center;
-  padding: 2%;
+  padding: 1.5%;
   width: 16.66%;
-}
-
-tr{
-  maring-top: 10px;
-  maring-bottom: 10px;
 }
 
 .separator{
   border-right: 4px solid rgb(65, 65, 65);
 }
 
+
+@media screen and (max-width: 500px){
+  #calculator{
+    width: 90%;
+  }
+  
+  h1{
+    font-size: 6vw;
+  }
+  
+  i{
+    font-size: 3vw;
+  }
+  
+  button{
+    font: 5vw "consolas";
+    width: 12vw;
+    height: 10vh;
+    max-height: 60px;
+    min-height: 20px;
+  }
+  
+  #result_field{
+    height: 6vw;
+    font: 6vw "consolas";
+  }
+  
+  #equal{
+    height: 25vh;
+    min-height: 50px;
+  }
+}
