Add error checking and animation to input field

--- a/style.css
+++ b/style.css
@@ -73,7 +73,27 @@ button:active{
   border-right: 2px solid  grey;
   border-bottom: 2px solid grey;
   border-left: 2px solid rgb(90, 90, 90);
+  transition: color 0.2s ease;
 }
+
+.result_field_shake{
+  animation: shake 0.2s;
+  /* animation-iteration-count: infinite; */
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+} 
 
 table{
   width: 100%;
